--- a/css/foundation.css
+++ b/css/foundation.css
@@ -1289,16 +1289,16 @@ img {
 .button, button {
     border-style: solid;
     border-width: 0;
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Open Sans Condensed', sans-serif;
     line-height: normal;
     margin: 0 0 1.25rem;
     position: relative;
     text-align: center;
     -webkit-appearance: none;
-    border-radius: 0;
+    border-radius: 4px;
     display: inline-block;
-    font-size: 1rem;
-    background-color: #3396CB;
+    font-size: 1.35em;
+    background-color: #333;
     border-color: #2978a2;
     color: #FFF;
     transition: background-color .3s ease-out;
@@ -1306,7 +1306,7 @@ img {
 }
 
 .button:focus, .button:hover, button:focus, button:hover {
-    background-color: #2978a2;
+    background-color: #FF033E;
     color: #FFF
 }
 
